--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-leaflet": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.2",
+    "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
